Bug Finally Fixed after a whole fucking day

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
-    <string name="app_name">Texty - Text to Search</string>
+    <string name="app_name">TXTY</string>
     <string name="action_settings">Config</string>
     <string name="section_format">Hello World from section: %1$d</string>
-    <string name="translation">Language Translation</string>
 
     <string-array name="dropdown_array">
         <item>English</item>
@@ -16,7 +15,7 @@
     </string-array>
 
     <string-array name="dropdown_array2">
-        <item>English2</item>
+        <item>English</item>
         <item>French</item>
         <item>Spanish</item>
         <item>Hindi</item>
@@ -38,7 +37,7 @@
     </string-array>
 
     <string-array name="dropdown1_array2">
-        <item>USD2</item>
+        <item>USD</item>
         <item>CAD</item>
         <item>CNY</item>
         <item>CUP</item>
@@ -63,6 +62,6 @@
     </string-array>
 
     <string-array name="dropdown3_array2">
-        <item>N/A2</item>
+        <item>N/A</item>
     </string-array>
 </resources>
